...

    try {
      setIsLoading(true);
      await authService.resetPassword(token, data.password);
      setIsLoading(false);
      Alert.alert(t('profile.success'), t('auth.resetSuccess'), [
          { text: 'OK', onPress: () => router.replace('/(auth)/login') }
      ]);
    } catch {
      setIsLoading(false);
      Alert.alert(t('profile.error'), t('auth.unexpectedError'));
    }
  };
...
