...
            size={20}
            color={Colors[theme].mutedForeground}
          />
        </TouchableOpacity>

        <TextInput
          testID="quantity-input"
          className="flex-1 font-bold text-foreground px-4 bg-background border border-border rounded-xl text-center"
          style={{ fontSize: 20 }}
          value={quantity}
          onChangeText={(text) => {
            onChangeQuantity(text);
          }}
...
